[gd_scene load_steps=7 format=3 uid="uid://06bwncarbswa"]

[ext_resource type="Script" uid="uid://btvfhxu7i86ca" path="res://Menustuffs/OnlineMenu/OnlineMenu.gd" id="1_khr1v"]
[ext_resource type="Texture2D" uid="uid://d05dxajfk5ioy" path="res://Menustuffs/Commons/Esc.png" id="2_isfkt"]
[ext_resource type="Texture2D" uid="uid://p46ringr2s15" path="res://Menustuffs/DipshitMenu/ExtendableDipshitBox.png" id="3_bqvpi"]
[ext_resource type="FontFile" uid="uid://dq61mghtm7weo" path="res://Gamestuffs/Fonts/general.fnt" id="4_xg13d"]
[ext_resource type="PackedScene" uid="uid://dc3gp7wgayv4o" path="res://Menustuffs/SaveMenu/SaveBoxOnline.tscn" id="5_yyxvo"]
[ext_resource type="Texture2D" uid="uid://x44wj73nfd6o" path="res://Menustuffs/Commons/Enter.png" id="6_nybyn"]

[node name="OnlineMenu" type="Node2D"]
script = ExtResource("1_khr1v")

[node name="MenuCanvas" type="CanvasLayer" parent="."]

[node name="LeftAnchor" type="Control" parent="MenuCanvas"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Esc" type="Sprite2D" parent="MenuCanvas/LeftAnchor"]
position = Vector2(54, 39)
texture = ExtResource("2_isfkt")

[node name="MidAnchor" type="Control" parent="MenuCanvas"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="DipshitDescBox" type="NinePatchRect" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -195.0
offset_top = -165.0
offset_right = 235.0
offset_bottom = 200.0
texture = ExtResource("3_bqvpi")
patch_margin_left = 20
patch_margin_top = 28
patch_margin_right = 28
patch_margin_bottom = 16

[node name="UsernameLabel" type="Label" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -180.0
offset_top = -157.0
offset_right = 217.0
offset_bottom = -127.0
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "Nome de usuário"
text_overrun_behavior = 3

[node name="UsrTxt" type="TextEdit" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -179.0
offset_top = -125.0
offset_right = 217.0
offset_bottom = -98.0
theme_override_constants/line_spacing = -6
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
placeholder_text = "Seu \"nickname\""
caret_blink = true

[node name="ServerLabel" type="Label" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -180.0
offset_top = -85.0
offset_right = 217.0
offset_bottom = -55.0
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "Servidor"
text_overrun_behavior = 3

[node name="IPTxt" type="TextEdit" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -179.0
offset_top = -53.0
offset_right = 139.0
offset_bottom = -26.0
theme_override_constants/line_spacing = -6
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "127.0.0.1"
placeholder_text = "Endereço IP"
caret_blink = true

[node name="PortTxt" type="TextEdit" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = 145.0
offset_top = -53.0
offset_right = 217.0
offset_bottom = -26.0
theme_override_constants/line_spacing = -6
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "7000"
placeholder_text = "Porta"
caret_blink = true

[node name="SaveLabel" type="Label" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -180.0
offset_top = -6.0
offset_right = 217.0
offset_bottom = 24.0
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "Save local"
text_overrun_behavior = 3

[node name="SaveBoxOnline" parent="MenuCanvas/MidAnchor" instance=ExtResource("5_yyxvo")]
position = Vector2(-171, 27)

[node name="JoinButt" type="Button" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = 22.0
offset_top = 153.0
offset_right = 216.0
offset_bottom = 191.0
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "Entrar"

[node name="HostButt" type="Button" parent="MenuCanvas/MidAnchor"]
layout_mode = 0
offset_left = -175.0
offset_top = 153.0
offset_right = 19.0
offset_bottom = 191.0
tooltip_text = "OBS: apenas a porta será considerada"
mouse_default_cursor_shape = 2
theme_override_fonts/font = ExtResource("4_xg13d")
theme_override_font_sizes/font_size = 18
text = "Hospedar"

[node name="RightAnchor" type="Control" parent="MenuCanvas"]
visible = false
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="Enter" type="Sprite2D" parent="MenuCanvas/RightAnchor"]
position = Vector2(-36, 0)
texture = ExtResource("6_nybyn")

[node name="FadeRect" type="ColorRect" parent="MenuCanvas"]
visible = false
self_modulate = Color(0, 0, 0, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[connection signal="text_changed" from="MenuCanvas/MidAnchor/UsrTxt" to="." method="_on_usrtxt_text_changed"]
[connection signal="onClicked" from="MenuCanvas/MidAnchor/SaveBoxOnline" to="." method="savebox_click"]
[connection signal="pressed" from="MenuCanvas/MidAnchor/JoinButt" to="." method="on_join"]
[connection signal="pressed" from="MenuCanvas/MidAnchor/HostButt" to="." method="on_host"]
